4-5 个性化用户认证流程（二）

--- a/imooc-security/docs/学习文章超链.md
+++ b/imooc-security/docs/学习文章超链.md
@@ -176,3 +176,45 @@ Java中
 你不知道的System.out.println()
 
 <https://my.oschina.net/zjllovecode/blog/1538380>
+
+
+
+## 2019年3月16日
+
+理解Callable 和 Spring DeferredResult（翻译）
+
+<https://www.cnblogs.com/aheizi/p/5659030.html>
+
+
+
+## 2019年3月17日
+
+3.了解java .lang 包,java.util包等常用包
+
+<https://blog.csdn.net/u014252871/article/details/53434530>
+
+apache.commons.lang.StringUtils 的一些用法
+
+<https://blog.csdn.net/hll174/article/details/49246339>
+
+
+
+## 2019年3月19日
+
+SpringSecurity基本原理以及自定义用户认证逻辑
+
+<https://blog.csdn.net/qq_37142346/article/details/79945085>
+
+security个性化用户认证流程一
+
+<https://blog.csdn.net/qq_36421955/article/details/83619142>
+
+Re-run Spring Boot Configuration Annotation Processor to update generated metadata
+
+<https://blog.csdn.net/qq_40233736/article/details/85070300>
+
+<http://www.manongjc.com/article/25886.html>
+
+spring boot 使用@ConfigurationProperties
+
+<https://blog.csdn.net/yingxiake/article/details/51263071>
