4-7 图片验证码

--- a/imooc-security/docs/笔记.md
+++ b/imooc-security/docs/笔记.md
@@ -939,3 +939,233 @@ public class BrowserSecurityConfig extends WebSecurityConfigurerAdapter {
 
 ![2019-03-20_115722](https://raw.githubusercontent.com/duanwandao/imooc-security/master/imooc-security/docs/pictures/2019-03-20_115722.png)
 
+![2019-03-20_122943](https://raw.githubusercontent.com/duanwandao/imooc-security/master/imooc-security/docs/pictures/2019-03-20_122943.png)
+
+验证码实体类
+
+```java
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class ImageCode {
+
+    private BufferedImage image;
+
+    private String code;  //随机数存到session中
+
+    private LocalDateTime expireTime;  //有效时间
+
+    public ImageCode (BufferedImage image,String code,
+                      int expireIn) {
+        this.image=image;
+        this.code=code;
+        this.expireTime=LocalDateTime.now().plusSeconds(expireIn);
+    }
+
+    public boolean isExpried(){
+        //如果 过期时间 在 当前日期 之前，则验证码过期
+        return LocalDateTime.now().isAfter(expireTime);
+    }
+}
+
+```
+
+验证码Controller，此时即可显示验证码，但需要写过滤器验证
+
+```java
+@RestController
+public class ValidateCodeController {
+
+    public static final String SESSION_KEY = "SESSION_KEY_IMAGE_CODE";
+
+    private SessionStrategy sessionStrategy=new HttpSessionSessionStrategy();
+
+    @GetMapping("/code/image")
+    public void createCode(HttpServletRequest request, HttpServletResponse response)throws Exception {
+        ImageCode imageCode = createImageCode(request);
+        //code放到sesison 第二步
+        sessionStrategy.setAttribute(new ServletWebRequest(request), SESSION_KEY, imageCode);
+        //将图片写到响应的接口中 第三步
+        ImageIO.write(imageCode.getImage(), "JPEG", response.getOutputStream());
+    }
+
+    private ImageCode createImageCode(HttpServletRequest request) {
+        //第一步 生成随机验证码 可以去网上搜
+        int width=67;//宽和高
+        int height=23;
+        BufferedImage image = new BufferedImage(width,height,BufferedImage.TYPE_INT_BGR);
+
+        Graphics g = image.getGraphics();
+
+        Random random = new Random();
+
+        g.setColor(getRandColor(200,250));
+        g.fillRect(0, 0, width, height);
+        g.setFont(new Font("Times New Roman",Font.ITALIC,20));
+        g.setColor(getRandColor(160,200));
+        for(int i=0;i<155;i++) {
+            int x = random.nextInt(width);
+            int y = random.nextInt(height);
+            int xl =random.nextInt(12);
+            int yl =random.nextInt(12);
+            g.drawLine(x, y, x+xl, y+yl);
+        }
+
+        String sRand = "";
+        for (int i = 0; i < 4; i++) {//数字验证码长度
+            String rand = String.valueOf(random.nextInt(10));
+            sRand +=rand;
+            g.setColor(new Color(20 + random.nextInt(110),
+                    20 + random.nextInt(110),20 + random.nextInt(110)));
+            g.drawString(rand, 13*i+6, 16);
+        }
+
+        g.dispose();
+
+        return new ImageCode(image,sRand,60);//有效期60秒
+    }
+
+    /**
+     * 生成随机背景条纹
+     */
+    private Color getRandColor(int fc,int bc) {
+        Random random = new Random();
+        if (fc > 255) {
+            fc = 255;
+        }
+        if (bc > 255) {
+            bc = 255;
+        }
+        int r = fc + random.nextInt(bc - fc);
+        int g = fc + random.nextInt(bc - fc);
+        int b = fc + random.nextInt(bc - fc);
+        return new Color(r,g,b);
+    }
+}
+```
+
+过滤器，自动注入AuthenticationFailureHandler，实际为`com.imooc.security.browser.authentication.ImoocAuthenticationFailureHandler`类，自定义了异常类`ValidateCodeException`，有任何逻辑不对就抛出异常，再让`ImoocAuthenticationFailureHandler`处理。否则进行下一个过滤器
+
+```java
+@Data
+@Slf4j
+public class ValidateCodeFilter extends OncePerRequestFilter {
+
+    @Autowired
+    private AuthenticationFailureHandler authenticationFailureHandler;
+
+    private SessionStrategy sessionStrategy = new HttpSessionSessionStrategy();
+
+    @Override
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
+        //主干逻辑
+        //必须是个请求路径并且必须是post请求
+        if (StringUtils.equals("/authentication/form", request.getRequestURI()) && StringUtils.equalsIgnoreCase(request.getMethod(), "post")) {
+            try {
+                //校验逻辑
+                validate(new ServletWebRequest(request));
+            }catch (ValidateCodeException e){
+                log.info("ValidateCodeFilter==>doFilterInternal==>authenticationFailureHandler.getClass().getName()== "+authenticationFailureHandler.getClass().getName());
+                authenticationFailureHandler.onAuthenticationFailure(request, response, e);
+                return;
+            }
+        }
+
+        filterChain.doFilter(request, response);
+    }
+
+    //校验逻辑
+    private void validate(ServletWebRequest request) throws ServletRequestBindingException {
+
+        ImageCode codeInSession = (ImageCode)sessionStrategy.getAttribute(request,
+                ValidateCodeController.SESSION_KEY);
+
+        String codeInRequest = ServletRequestUtils.getStringParameter(request.getRequest(), "imageCode");
+
+        if (StringUtils.isBlank(codeInRequest)) {
+            throw new ValidateCodeException("验证码的值不能为空,the code must be not null");
+        }
+        if (codeInSession == null) {
+            throw new ValidateCodeException("验证码不存在");
+        }
+        if (codeInSession.isExpried()) {
+            sessionStrategy.removeAttribute(request, ValidateCodeController.SESSION_KEY);
+            throw new ValidateCodeException("验证码已过期");
+        }
+        if (!StringUtils.equals(codeInSession.getCode(), codeInRequest)) {
+            throw new ValidateCodeException("验证码不匹配");
+        }
+
+        sessionStrategy.removeAttribute(request, ValidateCodeController.SESSION_KEY);
+    }
+}
+
+```
+
+```java
+public class ValidateCodeException extends AuthenticationException {
+
+
+    /**
+     *
+     */
+    private static final long serialVersionUID = -7285211528095468156L;
+
+    public ValidateCodeException(String msg) {
+        super(msg);
+    }
+}
+```
+
+最后配置信息要添加上
+
+```java
+@Configuration
+@Slf4j
+public class BrowserSecurityConfig extends WebSecurityConfigurerAdapter {
+
+    @Autowired
+    private SecurityProperties securityProperties;
+
+    //让系统使用我们自定义 而不是系统默认的配置
+    @Autowired
+    private ImoocAuthenticationSuccessHandler imoocAuthenticationSuccessHandler;
+
+    @Autowired
+    private ImoocAuthenticationFailureHandler imoocAuthenticationFailureHandler;
+
+    //注入密码加密的类
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        //这里如果是自己编写的加密 则调用自己的类 方法有编码和解码验证方法
+        return new SCryptPasswordEncoder();
+    }
+
+    @Override
+    protected void configure(HttpSecurity http) throws Exception {
+
+        ValidateCodeFilter validateCodeFilter = new ValidateCodeFilter();
+        validateCodeFilter.setAuthenticationFailureHandler(imoocAuthenticationFailureHandler);
+
+        //在UsernamePasswordAuthenticationFilter 过滤器前 加一个过滤器 来搞验证码
+        http.addFilterBefore(validateCodeFilter, UsernamePasswordAuthenticationFilter.class)
+                .formLogin() //认证
+            .loginPage("/authentication/require")  //设置登录页面
+                .loginProcessingUrl("/authentication/form") //遇到该请求则进行user password认证
+                .successHandler(imoocAuthenticationSuccessHandler)  //成功后 使用我们自己的处理器处理
+                .failureHandler(imoocAuthenticationFailureHandler)  //设置失败处理器
+            .and()
+                .authorizeRequests()   //授权
+                //当访问这个路径的时候不需要身份认证 除了它其他的是需要身份认证
+                .antMatchers("/authentication/require"
+                        , securityProperties.getBrowser().getLoginPage()
+                        , "/code/image").permitAll()
+                .anyRequest()    //任何请求
+                .authenticated()   //都需要认证
+            .and()
+                .csrf().disable();
+
+    }
+}
+```
+
