4-10 短信验证码接口开发

--- a/imooc-security/docs/学习文章超链.md
+++ b/imooc-security/docs/学习文章超链.md
@@ -218,3 +218,71 @@ Re-run Spring Boot Configuration Annotation Processor to update generated metada
 spring boot 使用@ConfigurationProperties
 
 <https://blog.csdn.net/yingxiake/article/details/51263071>
+
+
+
+## 2019年3月20日
+
+security个性化用户认证流程二
+
+<https://blog.csdn.net/qq_36421955/article/details/83620575>
+
+Java8 time包的使用总结
+
+<https://spldeolin.com/posts/java8-time/>
+
+security图片验证码
+
+<https://blog.csdn.net/qq_36421955/article/details/83622585>
+
+OncePerRequestFilter的作用
+
+<https://www.cnblogs.com/liaojie970/p/8459628.html>
+
+Java中四种访问权限总结
+
+<https://blog.csdn.net/itachiyang/article/details/43647909>
+
+以增量的方式适应变化
+
+<https://blog.csdn.net/zhuizhiye1100/article/details/83303791>
+
+SpringBoot 整合 Security（二）实现验证码登录
+
+<https://www.jianshu.com/p/9d08c767b33e>
+
+
+
+## 2019年3月22日
+
+介绍Spring WebUtils 和 ServletRequestUtils
+
+<https://blog.csdn.net/neweastsun/article/details/80873994>
+
+InitializingBean的作用
+
+<https://blog.csdn.net/maclaren001/article/details/37039749>
+
+Spring之AntPathMatcher
+
+<https://www.jianshu.com/p/34f87d3097f5>
+
+spring基于url路径匹配用法经验介绍
+
+<https://blog.csdn.net/yan_dk/article/details/7261059>
+
+apache.commons.lang.StringUtils 使用心得
+
+<http://www.cnblogs.com/jifeng/archive/2012/08/05/2623767.html>
+
+org.apache.commons.lang3.StringUtils中常用方法
+
+<https://my.oschina.net/funmo/blog/615202>
+
+Spring Security身份认证之UserDetailsService
+
+<https://blog.csdn.net/my_learning_road/article/details/79833802>
+
+java String 初始化 是 null 还是 “” 他们的区别？
+
+<https://zhidao.baidu.com/question/334317125.html>
