4-12 短信登录开发、配置及重构

--- a/imooc-security/docs/学习文章超链.md
+++ b/imooc-security/docs/学习文章超链.md
@@ -286,3 +286,68 @@ Spring Security身份认证之UserDetailsService
 java String 初始化 是 null 还是 “” 他们的区别？
 
 <https://zhidao.baidu.com/question/334317125.html>
+
+
+
+## 2019年3月23日
+
+Spring Seurity系列（九）短信登录开发
+
+<https://blog.csdn.net/newhanzhe/article/details/81266010>
+
+\6. Spring Boot + Spring Security 短信发送功能（发送）
+
+<https://blog.csdn.net/qq_29451823/article/details/85072099>
+
+Spring Seurity系列（十）短信登录代码的重构
+
+<https://blog.csdn.net/newhanzhe/article/details/81267101>
+
+http状态码301和302详解及区别——辛酸的探索之路
+
+<https://blog.csdn.net/grandPang/article/details/47448395>
+
+HTTP header location 重定向 URL
+
+<https://blog.csdn.net/diyagoanyhacker/article/details/6545589>
+
+Java toUpperCase() 方法
+
+<http://www.runoob.com/java/java-string-touppercase.html>
+
+Spring-Security登录认证授权原理
+
+<https://wanglinyong.github.io/2018/07/10/Spring-Security%E7%99%BB%E5%BD%95%E8%AE%A4%E8%AF%81%E6%8E%88%E6%9D%83%E5%8E%9F%E7%90%86/>
+
+SpringSecurity登录原理（源码级讲解）
+
+<https://www.jianshu.com/p/a65f883de0c1>
+
+Class.getSimpleName()的作用
+
+<http://blog.sina.com.cn/s/blog_6e0c17b901010f0d.html>
+
+SpringSecurity认证流程详解
+
+<https://blog.csdn.net/u013435893/article/details/79605239>
+
+
+
+## 2019年3月24日
+
+常量接口 vs 常量类vs 枚举区别
+
+<https://2277259257.iteye.com/blog/2294663>
+
+java推荐使用枚举定义常量
+
+<https://blog.csdn.net/scandly_java/article/details/51683404>
+
+Java 枚举(enum) 详解7种常见的用法
+
+<https://blog.csdn.net/qq_27093465/article/details/52180865>
+
+Java 枚举类型
+
+<https://www.w3cschool.cn/java/java-enum-types.html>
+
