--- a/imooc-security/docs/笔记.md
+++ b/imooc-security/docs/笔记.md
@@ -2123,11 +2123,673 @@ BrowserSecurityConfig
 
 ![2019-03-23_180942](https://raw.githubusercontent.com/duanwandao/imooc-security/master/imooc-security/docs/pictures/2019-03-23_180942.png)
 
-### 短信登录开发
+### 短信登录开发、配置及重构
 
 ![2019-03-23_085125](https://raw.githubusercontent.com/duanwandao/imooc-security/master/imooc-security/docs/pictures/2019-03-23_085125.png)
 
-### 短信登录配置及重构
+![2019-03-23_204646](https://raw.githubusercontent.com/duanwandao/imooc-security/master/imooc-security/docs/pictures/2019-03-23_204646.png)
 
+此章节牵扯类太多，细节有诸多错误。最终代码须看GitHub
+
+短信登录验证地位同等于账号密码登录，所以可以模仿`UsernamePasswordAuthenticationToken`类
+
+短信登录验证信息封装类
+
+```java
+public class SmsCodeAuthenticationToken extends AbstractAuthenticationToken {
+
+    private static final long serialVersionUID = SpringSecurityCoreVersion.SERIAL_VERSION_UID;
+
+    private final Object principal;
+
+    /**
+     * This constructor can be safely used by any code that wishes to create a
+     * <code>UsernamePasswordAuthenticationToken</code>, as the {@link #isAuthenticated()}
+     * will return <code>false</code>.
+     *
+     */
+    public SmsCodeAuthenticationToken(String mobile) {
+        super(null);
+        this.principal = mobile;
+        setAuthenticated(false);
+    }
+
+    /**
+     * This constructor should only be used by <code>AuthenticationManager</code> or
+     * <code>AuthenticationProvider</code> implementations that are satisfied with
+     * producing a trusted (i.e. {@link #isAuthenticated()} = <code>true</code>)
+     * authentication token.
+     *
+     * @param principal
+     * @param authorities
+     */
+    public SmsCodeAuthenticationToken(Object principal, Collection<? extends GrantedAuthority> authorities) {
+        super(authorities);
+        this.principal = principal;
+        super.setAuthenticated(true);
+    }
+
+    @Override
+    public Object getCredentials() {
+        return null;
+    }
+
+    @Override
+    public Object getPrincipal() {
+        return this.principal;
+    }
+
+    public void setAuthenticated(boolean isAuthenticated) throws IllegalArgumentException {
+        if (isAuthenticated) {
+            throw new IllegalArgumentException(
+                    "Cannot set this token to trusted - use constructor which takes a GrantedAuthority list instead");
+        }
+
+        super.setAuthenticated(false);
+    }
+
+    @Override
+    public void eraseCredentials() {
+        super.eraseCredentials();
+    }
+}
+```
+
+短信登录过滤器`SmsCodeAuthenticationFilter`参照`UsernamePasswordAuthenticationFilter`
+
+```java
+public class SmsCodeAuthenticationFilter extends AbstractAuthenticationProcessingFilter {
+
+    // ~ Static fields/initializers
+    // =====================================================================================
+
+    private String mobileParameter = SecurityConstants.DEFAULT_PARAMETER_NAME_MOBILE;
+    private boolean postOnly = true;
+
+    // ~ Constructors
+    // ===================================================================================================
+    //处理的短信登录的请求是什么
+    public SmsCodeAuthenticationFilter() {
+        super(new AntPathRequestMatcher(SecurityConstants.DEFAULT_LOGIN_PROCESSING_URL_MOBILE, "POST"));
+    }
+
+    // ~ Methods
+    // ========================================================================================================
+
+    public Authentication attemptAuthentication(HttpServletRequest request, HttpServletResponse response)
+            throws AuthenticationException {
+        if (postOnly && !request.getMethod().equals("POST")) {
+            throw new AuthenticationServiceException("Authentication method not supported: " + request.getMethod());
+        }
+
+        String mobile = obtainMobile(request);
+
+        if (mobile == null) {
+            mobile = "";
+        }
+
+        mobile = mobile.trim();
+
+        // 将请求的信息设置在Token中
+        SmsCodeAuthenticationToken authRequest = new SmsCodeAuthenticationToken(mobile);
+
+        // Allow subclasses to set the "details" property
+        setDetails(request, authRequest);
+        //拿着Token调用AuthenticationManager
+        return this.getAuthenticationManager().authenticate(authRequest);
+    }
+
+    /**
+     * 获取请求参数中的手机号
+     */
+    protected String obtainMobile(HttpServletRequest request) {
+        return request.getParameter(mobileParameter);
+    }
+
+    /**
+     * 将请求的信息设置在Token中
+     * Provided so that subclasses may configure what is put into the
+     * authentication request's details property.
+     *
+     * @param request
+     *            that an authentication request is being created for
+     * @param authRequest
+     *            the authentication request object that should have its details
+     *            set
+     */
+    protected void setDetails(HttpServletRequest request, SmsCodeAuthenticationToken authRequest) {
+        authRequest.setDetails(authenticationDetailsSource.buildDetails(request));
+    }
+
+    /**
+     * Sets the parameter name which will be used to obtain the username from
+     * the login request.
+     *
+     * @param usernameParameter
+     *            the parameter name. Defaults to "username".
+     */
+    public void setMobileParameter(String usernameParameter) {
+        Assert.hasText(usernameParameter, "Username parameter must not be empty or null");
+        this.mobileParameter = usernameParameter;
+    }
+
+
+    /**
+     * Defines whether only HTTP POST requests will be allowed by this filter.
+     * If set to true, and an authentication request is received which is not a
+     * POST request, an exception will be raised immediately and authentication
+     * will not be attempted. The <tt>unsuccessfulAuthentication()</tt> method
+     * will be called as if handling a failed authentication.
+     * <p>
+     * Defaults to <tt>true</tt> but may be overridden by subclasses.
+     */
+    public void setPostOnly(boolean postOnly) {
+        this.postOnly = postOnly;
+    }
+
+    public final String getMobileParameter() {
+        return mobileParameter;
+    }
+
+}
+```
+
+常量接口
+
+```java
+public interface SecurityConstants {
+
+    /**
+     * 默认的处理验证码的url前缀
+     */
+    public static final String DEFAULT_VALIDATE_CODE_URL_PREFIX = "/code";
+    /**
+     * 当请求需要身份认证时，默认跳转的url
+     *
+     * @see SecurityController
+     */
+    public static final String DEFAULT_UNAUTHENTICATION_URL = "/authentication/require";
+    /**
+     * 默认的用户名密码登录请求处理url
+     */
+    public static final String DEFAULT_LOGIN_PROCESSING_URL_FORM = "/authentication/form";
+    /**
+     * 默认的手机验证码登录请求处理url
+     */
+    public static final String DEFAULT_LOGIN_PROCESSING_URL_MOBILE = "/authentication/mobile";
+    /**
+     * 默认登录页面
+     *
+     * @see SecurityController
+     */
+    public static final String DEFAULT_LOGIN_PAGE_URL = "/imooc-signIn.html";
+    /**
+     * 验证图片验证码时，http请求中默认的携带图片验证码信息的参数的名称
+     */
+    public static final String DEFAULT_PARAMETER_NAME_CODE_IMAGE = "imageCode";
+    /**
+     * 验证短信验证码时，http请求中默认的携带短信验证码信息的参数的名称
+     */
+    public static final String DEFAULT_PARAMETER_NAME_CODE_SMS = "smsCode";
+    /**
+     * 发送短信验证码 或 验证短信验证码时，传递手机号的参数的名称
+     */
+    public static final String DEFAULT_PARAMETER_NAME_MOBILE = "mobile";
+    
+}
+```
+
+短信登录验证逻辑
+
+```java
+public class SmsCodeAuthenticationProvider implements AuthenticationProvider {
+
+    private UserDetailsService userDetailsService;
+
+    /**
+     * 身份认证的逻辑
+     * @param authentication
+     * @return
+     * @throws AuthenticationException
+     */
+    @Override
+    public Authentication authenticate(Authentication authentication) throws AuthenticationException {
+
+        SmsCodeAuthenticationToken authenticationToken = (SmsCodeAuthenticationToken) authentication;
+
+        UserDetails user = userDetailsService.loadUserByUsername((String) authenticationToken.getPrincipal());
+
+        if (user == null) {
+            throw new InternalAuthenticationServiceException("无法获取用户信息");
+        }
+        /**
+         *  1: 用户认证信息
+         *  2：用户权限
+         */
+        SmsCodeAuthenticationToken authenticationResult = new SmsCodeAuthenticationToken(user, user.getAuthorities());
+        //将之前未认证的请求放进认证后的Token中
+        authenticationResult.setDetails(authenticationToken.getDetails());
+
+        return authenticationResult;
+    }
+
+    /**
+     * AuthenticationManager带着Token调用Provider
+     * 判断传进来的Token最终调用的是哪个Provider
+     * @param authentication
+     * @return
+     */
+    @Override
+    public boolean supports(Class<?> authentication) {
+        return SmsCodeAuthenticationToken.class.isAssignableFrom(authentication);
+    }
+
+    public UserDetailsService getUserDetailsService() {
+        return userDetailsService;
+    }
+
+    public void setUserDetailsService(UserDetailsService userDetailsService) {
+        this.userDetailsService = userDetailsService;
+    }
+}
+```
+
+校验码类型
+
+```java
+public enum ValidateCodeType {
+
+    /**
+     * 短信验证码
+     */
+    SMS {
+        public String getParamNameOnValidate() {
+            return SecurityConstants.DEFAULT_PARAMETER_NAME_CODE_SMS;
+        }
+    },
+    IMAGE {
+        public String getParamNameOnValidate(){
+            return SecurityConstants.DEFAULT_PARAMETER_NAME_CODE_IMAGE;
+        }
+    };
+
+
+    /**
+     * 校验时从请求中获取的参数的名字
+     * @return
+     */
+    public abstract String getParamNameOnValidate();
+}
+```
+
+依赖查找出相应的验证码处理器,校验码处理器管理器
+
+```java
+public class ValidateCodeProcessorHolder {
+
+    //依赖查找
+    @Autowired
+    private Map<String, ValidateCodeProcessor> validateCodeProcessors;
+
+    /**
+     * @param type
+     * @return
+     */
+    public ValidateCodeProcessor findValidateCodeProcessor(ValidateCodeType type) {
+        return findValidateCodeProcessor(type.toString().toLowerCase());
+    }
+
+    private ValidateCodeProcessor findValidateCodeProcessor(String type) {
+        String name = type.toLowerCase() + ValidateCodeProcessor.class.getSimpleName();
+        ValidateCodeProcessor processor = validateCodeProcessors.get(name);
+        if (processor == null) {
+            throw new ValidateCodeException("验证码处理器" + name + "不存在");
+        }
+        return processor;
+    }
+
+}
+```
+
+校验码处理器，封装不同校验码的处理逻辑
+
+```java
+public interface ValidateCodeProcessor {
+
+    /**
+     * 验证码放入session时的前缀
+     */
+    String SESSION_KEY_PREFIX = "SESSION_KEY_FOR_CODE_";
+
+
+    /**
+     * 创建校验码
+     *
+     * @param request
+     * @throws Exception
+     */
+    void create(ServletWebRequest request) throws Exception;
+
+    /**
+     * 校验验证码
+     *
+     * @param servletWebRequest
+     * @throws Exception
+     */
+    void validate(ServletWebRequest servletWebRequest);
+}
+```
+
+抽象的验证码处理器AbstractValidateCodeProcessor
+
+```java
+public abstract class AbstractValidateCodeProcessor<C extends ValidateCode> implements ValidateCodeProcessor {
+
+    /**
+     * 收集系统中所有的 {@link ValidateCodeGenerator} 接口的实现。
+     */
+    @Autowired
+    private Map<String, ValidateCodeGenerator> validateCodeGenerators;
+
+    /**
+     * 操作session的工具类
+     */
+    private SessionStrategy sessionStrategy = new HttpSessionSessionStrategy();
+
+    @Override
+    public void create(ServletWebRequest request) throws Exception {
+        C validateCode = generate(request);
+        save(request, validateCode);
+        send(request, validateCode);
+    }
+
+    /**
+     * 生成校验码
+     *
+     * @param request
+     * @return
+     */
+    @SuppressWarnings("unchecked")
+    private C generate(ServletWebRequest request) {
+        String type = getValidateCodeType(request).toString().toLowerCase();
+        String generatorName = type + ValidateCodeGenerator.class.getSimpleName();
+        ValidateCodeGenerator validateCodeGenerator = validateCodeGenerators.get(generatorName);
+        if (validateCodeGenerator == null) {
+            throw new ValidateCodeException("验证码生成器" + generatorName + "不存在");
+        }
+        return (C) validateCodeGenerator.generate(request);
+    }
+
+    /**
+     * 保存校验码
+     *
+     * @param request
+     * @param validateCode
+     */
+    private void save(ServletWebRequest request, C validateCode) {
+        sessionStrategy.setAttribute(request, getSessionKey(request), validateCode);
+    }
+
+    /**
+     * 构建验证码放入session时的key
+     *
+     * @param request
+     * @return
+     */
+    private String getSessionKey(ServletWebRequest request) {
+        return SESSION_KEY_PREFIX + getValidateCodeType(request).toString().toUpperCase();
+    }
+
+    /**
+     * 发送校验码，由子类实现
+     *
+     * @param request
+     * @param validateCode
+     * @throws Exception
+     */
+    protected abstract void send(ServletWebRequest request, C validateCode) throws Exception;
+
+    /**
+     * 根据请求的url获取校验码的类型
+     *
+     * @param request
+     * @return
+     */
+    private ValidateCodeType getValidateCodeType(ServletWebRequest request) {
+        String type = StringUtils.substringBefore(getClass().getSimpleName(), "CodeProcessor");
+        return ValidateCodeType.valueOf(type.toUpperCase());
+    }
+
+    @SuppressWarnings("unchecked")
+    @Override
+    public void validate(ServletWebRequest request) {
+
+        ValidateCodeType processorType = getValidateCodeType(request);
+        String sessionKey = getSessionKey(request);
+
+        C codeInSession = (C) sessionStrategy.getAttribute(request, sessionKey);
+
+        String codeInRequest;
+        try {
+            codeInRequest = ServletRequestUtils.getStringParameter(request.getRequest(),
+                    processorType.getParamNameOnValidate());
+        } catch (ServletRequestBindingException e) {
+            throw new ValidateCodeException("获取验证码的值失败");
+        }
+
+        if (StringUtils.isBlank(codeInRequest)) {
+            throw new ValidateCodeException(processorType + "验证码的值不能为空");
+        }
+
+        if (codeInSession == null) {
+            throw new ValidateCodeException(processorType + "验证码不存在");
+        }
+
+        if (codeInSession.isExpried()) {
+            sessionStrategy.removeAttribute(request, sessionKey);
+            throw new ValidateCodeException(processorType + "验证码已过期");
+        }
+
+        if (!StringUtils.equals(codeInSession.getCode(), codeInRequest)) {
+            throw new ValidateCodeException(processorType + "验证码不匹配");
+        }
+
+        sessionStrategy.removeAttribute(request, sessionKey);
+    }
+}
+```
+
+校验验证码的过滤器ValidateCodeFilter
+
+```java
+@Data
+@Slf4j
+@Component("validateCodeFilter")
+public class ValidateCodeFilter extends OncePerRequestFilter implements InitializingBean {
+
+    /**
+     * 验证码校验失败处理器
+     */
+    @Autowired
+    private AuthenticationFailureHandler authenticationFailureHandler;
+
+    /**
+     * 系统配置信息
+     */
+    @Autowired
+    private SecurityProperties securityProperties;
+
+    /**
+     * 系统中的校验码处理器
+     */
+    @Autowired
+    private ValidateCodeProcessorHolder validateCodeProcessorHolder;
+
+    /**
+     * 存放所有需要校验验证码的url
+     */
+    private Map<String, ValidateCodeType> urlMap = new HashMap<>();
+
+    /**
+     * 验证请求url与配置的url是否匹配的工具类
+     */
+    private AntPathMatcher pathMatcher = new AntPathMatcher();
+
+    /**
+     * 初始化要拦截的url配置信息
+     * @throws ServletException
+     */
+    @Override
+    public void afterPropertiesSet() throws ServletException {
+        super.afterPropertiesSet();
+
+        urlMap.put(SecurityConstants.DEFAULT_LOGIN_PROCESSING_URL_FORM, ValidateCodeType.IMAGE);
+        addUrlToMap(securityProperties.getCode().getImage().getUrl(), ValidateCodeType.IMAGE);
+
+        urlMap.put(SecurityConstants.DEFAULT_LOGIN_PROCESSING_URL_MOBILE, ValidateCodeType.SMS);
+        addUrlToMap(securityProperties.getCode().getSms().getUrl(), ValidateCodeType.SMS);
+
+    }
+
+    /**
+     * 将系统中配置的需要校验验证码的URL根据校验的类型放入map
+     *
+     * @param urlString
+     * @param type
+     */
+    protected void addUrlToMap(String urlString, ValidateCodeType type) {
+        if (StringUtils.isNotBlank(urlString)) {
+            String[] urls = StringUtils.splitByWholeSeparatorPreserveAllTokens(urlString, ",");
+            for (String url : urls) {
+                urlMap.put(url, type);
+            }
+        }
+    }
+
+    /**
+     * @see
+     * org.springframework.web.filter.OncePerRequestFilter#doFilterInternal(
+     * javax.servlet.http.HttpServletRequest,
+     * javax.servlet.http.HttpServletResponse, javax.servlet.FilterChain)
+     * @param request
+     * @param response
+     * @param filterChain
+     * @throws ServletException
+     * @throws IOException
+     */
+    @Override
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
+
+        ValidateCodeType type = getValidateCodeType(request);
+        if (type != null) {
+            logger.info("校验请求(" + request.getRequestURI() + ")中的验证码,验证码类型" + type);
+            try {
+                validateCodeProcessorHolder.findValidateCodeProcessor(type).validate(new ServletWebRequest(request, response));
+                logger.info("验证码校验通过");
+            } catch (ValidateCodeException exception) {
+                authenticationFailureHandler.onAuthenticationFailure(request, response, exception);
+                return;
+            }
+        }
+
+        filterChain.doFilter(request, response);
+    }
+
+    /**
+     * 获取校验码的类型，如果当前请求不需要校验，则返回null
+     *
+     * @param request
+     * @return
+     */
+    private ValidateCodeType getValidateCodeType(HttpServletRequest request) {
+        ValidateCodeType result = null;
+        if (!StringUtils.equalsIgnoreCase(request.getMethod(), "get")) {
+            Set<String> urls = urlMap.keySet();
+            for (String url : urls) {
+                if (pathMatcher.match(url, request.getRequestURI())) {
+                    result = urlMap.get(url);
+                }
+            }
+        }
+        return result;
+    }
+
+}
+```
+
+短信验证码和短信登录的相关类进行的配置类
+
+```java
+@Component
+public class SmsCodeAuthenticationSecurityConfig extends SecurityConfigurerAdapter<DefaultSecurityFilterChain, HttpSecurity> {
+
+    @Autowired
+    private AuthenticationSuccessHandler imoocAuthenticationSuccessHandler;
+
+    @Autowired
+    private AuthenticationFailureHandler imoocAuthenticationFailureHandler;
+
+    @Autowired
+    private UserDetailsService userDetailsService;
+
+    @Override
+    public void configure(HttpSecurity http) throws Exception {
+
+        SmsCodeAuthenticationFilter smsCodeAuthenticationFilter = new SmsCodeAuthenticationFilter();
+        smsCodeAuthenticationFilter.setAuthenticationManager(http.getSharedObject(AuthenticationManager.class));
+        smsCodeAuthenticationFilter.setAuthenticationSuccessHandler(imoocAuthenticationSuccessHandler);
+        smsCodeAuthenticationFilter.setAuthenticationFailureHandler(imoocAuthenticationFailureHandler);
+
+        SmsCodeAuthenticationProvider smsCodeAuthenticationProvider = new SmsCodeAuthenticationProvider();
+        smsCodeAuthenticationProvider.setUserDetailsService(userDetailsService);
+
+        http.authenticationProvider(smsCodeAuthenticationProvider)
+                .addFilterAfter(smsCodeAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+
+    }
+
+}
+```
+
+密码登录的一些配置
+
+```java
+public class AbstractChannelSecurityConfig extends WebSecurityConfigurerAdapter {
+
+    @Autowired
+    protected AuthenticationSuccessHandler imoocAuthenticationSuccessHandler;
+
+    @Autowired
+    protected AuthenticationFailureHandler imoocAuthenticationFailureHandler;
+
+    protected void applyPasswordAuthenticationConfig(HttpSecurity http) throws Exception {
+        http.formLogin()
+                .loginPage(SecurityConstants.DEFAULT_UNAUTHENTICATION_URL)
+                .loginProcessingUrl(SecurityConstants.DEFAULT_LOGIN_PROCESSING_URL_FORM)
+                .successHandler(imoocAuthenticationSuccessHandler)
+                .failureHandler(imoocAuthenticationFailureHandler);
+    }
+
+}
+```
+
+```java
+@Component("validateCodeSecurityConfig")
+public class ValidateCodeSecurityConfig extends SecurityConfigurerAdapter<DefaultSecurityFilterChain, HttpSecurity> {
+
+    @Autowired
+    private Filter validateCodeFilter;
+
+    @Override
+    public void configure(HttpSecurity http) throws Exception {
+        http.addFilterBefore(validateCodeFilter, AbstractPreAuthenticatedProcessingFilter.class);
+    }
+
+}
+```
+
+测试：
+
+![2019-03-25_203418](https://raw.githubusercontent.com/duanwandao/imooc-security/master/imooc-security/docs/pictures/2019-03-25_203418.png)
 
 
