--- a/imooc-security/docs/笔记.md
+++ b/imooc-security/docs/笔记.md
@@ -828,7 +828,7 @@ public class ImoocAuthenticationSuccessHandler extends SavedRequestAwareAuthenti
 ```
 失败处理器
 
-```
+```java
 @Component("imoocAuthenticationFailureHandler")
 @Slf4j
 public class ImoocAuthenticationFailureHandler extends SimpleUrlAuthenticationFailureHandler {
@@ -2792,4 +2792,20 @@ public class ValidateCodeSecurityConfig extends SecurityConfigurerAdapter<Defaul
 
 ![2019-03-25_203418](https://raw.githubusercontent.com/duanwandao/imooc-security/master/imooc-security/docs/pictures/2019-03-25_203418.png)
 
+### OAuth协议简介
 
+![2019-03-26_135354](https://raw.githubusercontent.com/duanwandao/imooc-security/master/imooc-security/docs/pictures/2019-03-26_135354.png)
+
+![2019-03-26_135557](https://raw.githubusercontent.com/duanwandao/imooc-security/master/imooc-security/docs/pictures/2019-03-26_135557.png)
+
+![2019-03-26_140018](https://raw.githubusercontent.com/duanwandao/imooc-security/master/imooc-security/docs/pictures/2019-03-26_140018.png)
+
+### SpringSocial简介
+
+![2019-03-26_140338](https://raw.githubusercontent.com/duanwandao/imooc-security/master/imooc-security/docs/pictures/2019-03-26_140338.png)
+
+![2019-03-26_140533](https://raw.githubusercontent.com/duanwandao/imooc-security/master/imooc-security/docs/pictures/2019-03-26_140533.png)
+
+![2019-03-26_141233](https://raw.githubusercontent.com/duanwandao/imooc-security/master/imooc-security/docs/pictures/2019-03-26_141233.png)
+
+### 开发QQ登录（上）
